--- a/menu/src/app/app.component.html
+++ b/menu/src/app/app.component.html
@@ -1,7 +1,11 @@
+<header>
 <nav>
-  <a routerLink="/inicio" routerLinkActive="active" ariaCurrentWhenActive="page">Inicio</a>
-  <a routerLink="/quienes" routerLinkActive="active" ariaCurrentWhenActive="page">¿Quienes somos?</a>
-  <a routerLink="/donde" routerLinkActive="active" ariaCurrentWhenActive="page">¿Donde estamos?</a>
-  <a routerLink="/contacto" routerLinkActive="active" ariaCurrentWhenActive="page">Contacta con nosotros</a>
+  <ul>
+ <li><a routerLink="/inicio" routerLinkActive="active" ariaCurrentWhenActive="page">Inicio</a></li>
+ <li><a routerLink="/quienes" routerLinkActive="active" ariaCurrentWhenActive="page">¿Quienes somos?</a></li>
+ <li><a routerLink="/donde" routerLinkActive="active" ariaCurrentWhenActive="page">¿Donde estamos?</a></li>
+ <li><a routerLink="/contacto" routerLinkActive="active" ariaCurrentWhenActive="page">Contacta con nosotros</a></li>
+</ul>
 </nav>
+</header>
 <router-outlet></router-outlet>
