final de la clase 20/02/2024

--- a/inmobilaria/src/app/app.component.html
+++ b/inmobilaria/src/app/app.component.html
@@ -1,5 +1,4 @@
+<h1>Imobilaria Futuro</h1>
 
-
-<a routerLink="/home" routerLinkActive="active" ariaCurrentWhenActive="page">Inicio</a>
 
 <router-outlet></router-outlet>
