--- a/inmobilaria/src/app/detalle/detalle.component.html
+++ b/inmobilaria/src/app/detalle/detalle.component.html
@@ -5,11 +5,9 @@
       <th>Imagen</th>
       <th>Descripcion</th>
     </tr>
-    @for(elemento of inmuebles; track elemento.referencia) {
     <tr>
-        <td>{{ elemento.referencia }}</td>
-        <td><img src="{{ elemento.img }}" alt="" /></td>
-        <td>{{ elemento.descripcion }}</td> 
+        <td>{{ inmuebles[id-1].referencia }}</td>
+        <td width="80%"><img src="{{ inmuebles[id-1].img }}" alt="" /></td>
+        <td>{{ inmuebles[id-1].descripcion }}</td> 
     </tr>
-    }
   </table>
