--- a/inmobilaria/src/app/home/home.component.html
+++ b/inmobilaria/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<h1>Inmobilaria Futuro</h1>
+
 <div>
   <table>
     <tr>
@@ -8,17 +8,11 @@
     </tr>
     @for(elemento of inmuebles; track elemento.referencia) {
     <tr>
-      <a
-        routerLink="/detalle"
-        routerLinkActive="active"
-        ariaCurrentWhenActive="page"
-      >
+      <a [routerLink]="['/detalle',elemento.referencia]">
         <td>{{ elemento.referencia }}</td>
-       
         <td><img src="{{ elemento.img }}" alt="" /></td>
         <td>{{ elemento.descripcion }}</td>
       </a>
-      <router-outlet></router-outlet>
     </tr>
     }
   </table>
