final de la clase 21-02-2024

--- a/blog/src/app/app.component.html
+++ b/blog/src/app/app.component.html
@@ -1,4 +1,5 @@
 <h1>Blog de Cibersecurity</h1>
-<img width="100%" src="https://www.itwise.es/wp-content/uploads/2019/11/NUEVA-4-1080x675.jpg" alt="Johao">
-<br>
+<a routerLink="alta_articulo">
+<button class="button button2">Alta artículos</button>
+</a>
 <router-outlet></router-outlet>
