--- a/blog/src/app/detalle/detalle.component.html
+++ b/blog/src/app/detalle/detalle.component.html
@@ -1,1 +1,10 @@
-<p>detalle works!</p>
+<h1>{{articulo.titulo}}</h1>
+<div>
+    <div>
+        <img src="{{articulo.imagen}}" alt="{{articulo.titulo}}">
+    </div>
+    <p>
+        {{articulo.resumen}}
+    </p>
+</div>
+
