--- a/inmobilaria/src/app/detalle/detalle.component.html
+++ b/inmobilaria/src/app/detalle/detalle.component.html
@@ -6,8 +6,8 @@
       <th>Descripcion</th>
     </tr>
     <tr>
-        <td>{{ inmuebles[id-1].referencia }}</td>
-        <td width="80%"><img src="{{ inmuebles[id-1].img }}" alt="" /></td>
-        <td>{{ inmuebles[id-1].descripcion }}</td> 
+        <td>{{ inmueble.referencia }}</td>
+        <td width="80%"><img src="{{ inmueble.img }}" alt="" /></td>
+        <td>{{ inmueble.descripcion }}</td> 
     </tr>
   </table>
