final de la clase 28/02

--- a/conexion/src/app/alta-empleado/alta-empleado.component.html
+++ b/conexion/src/app/alta-empleado/alta-empleado.component.html
@@ -13,4 +13,5 @@
     <input type="text" [(ngModel)]="e1.sueldo">
     <br>
     <button (click)="altaEmpleado()">Dar de alta</button>
+    <button (click)="altaEmpleadoHP()">dar de alta padre hijo</button>
 </div>
